--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,16 @@
     <section class="contact-form">
         <div class="left-contact">
             <h1>Love to hear from you, send us your thoughts</h1>
-            <form action="ambot-aha"> <label for="Fname">First Name</label> <input type="text" id="Fname" name="Fname" /> <label for="Lname">Last Name</label> <input type="text" id="Lname" name="Lname" /> <label for="Lname">Email Address</label> <input type="email" id="email" name="email" /> <label for="message">Message</label> <textarea id="message" name="message"></textarea> <button type="submit">Submit</button> </form>
+            <form onsubmit="sendEmail(); reset(); return false;"> 
+                <label for="Fname">First Name</label> 
+                <input type="text" id="Fname" name="Fname" /> 
+                <label for="Lname">Last Name</label> 
+                <input type="text" id="Lname" name="Lname" /> 
+                <label for="Lname">Email Address</label> 
+                <input type="email" id="email" name="email" /> 
+                <label for="message">Message</label> 
+                <textarea id="message" rows="10" name="message">
+                </textarea> <button type="submit">Submit</button> </form>
         </div>
         <div class="right-contact">
             <h2>Frequently Asked Questions (FAQs) for our Food Recipe Website</h2>
@@ -150,6 +159,8 @@
         </div>
     </footer>
     <script src="js/nav.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="send-email"></script>
 </body>
 
 </html>
