--- a/all.html
+++ b/all.html
@@ -8,48 +8,42 @@
 
     <link rel="icon" href="img/Xassets/logo3.png" />
     <!--CSS-->
-    <link rel="stylesheet" href="css/home.css" />
-    <link rel="stylesheet" href="css/root.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/update.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/testimonial.css" />
-    <link rel="stylesheet" href="css/all.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css" defer/>
+    <link rel="stylesheet" href="css/root.css" defer/>
+    <link rel="stylesheet" href="css/all.css" defer/>
+  
     <!--fONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" defer/>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" defer/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" defer/>
     <!--ICONS-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,1,0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,1,0" defer/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" defer/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" defer/>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" defer/>
     <!--Script-->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
 </head>
 <body>
     
     <nav id="myNav">
         <div class="wrapper">
-                <div class="logo"> <a href="index.html"><img src="../img/Xassets/logo3.png" alt="logo" /></a> </div> <input type="radio" name="slider" id="menu-btn" /> <input type="radio" name="slider" id="close-btn" />
+                <div class="logo"> <a href="index.html"><img src="img/Xassets/logo3.png" alt="logo" /></a> </div> <input type="radio" name="slider" id="menu-btn" /> <input type="radio" name="slider" id="close-btn" />
                 <ul class="nav-links" id="myNavLinks">
                     <li> <a href="index.html" class="main-link"><i class="fa-solid fa-house-chimney"></i>Home</a> </li>
                     <li> <a href="About.html" class="main-link"><i class="fa-solid fa-address-card"></i>About</a> </li>
-                    <li> <a href="#" class="desktop-item main-link"><i class="fa-solid fa-compass"></i>Explore</a> <input type="checkbox" id="showMega" /> <label for="showMega" class="mobile-item main-link"><i class="fa-solid fa-compass"></i>Explore</label>
+                    <li> <a href="#" class="desktop-item main-link"><i class="fa-solid fa-compass"></i>Explore</a> <input type="checkbox" id="showMega" /> 
+                        <label for="showMega" id="scroll-label" class="mobile-item main-link"><i class="fa-solid fa-compass"></i>Explore</label>
                         <div class="mega-box">
                             <div class="content">
                                 <div class="row"> <img src="img/Xassets/asian.jpg" alt="logo" /> </div>
                                 <div class="row">
                                     <header>Discover Hobbies</header>
                                     <ul class="mega-links">
-                                        <li> <a href="https://snapshot.canon-asia.com/ph/article/eng/food-photography-and-styling-hacks" target="_blank"><i class="fa-solid fa-camera"></i>Food Photography</a> </li>
-                                        <li> <a href="#"><i class="fa-solid fa-vector-square"></i>Food Vectors</a> </li>
-                                        <li> <a href="#"><i class="fa-solid fa-palette"></i>Food Digital Art</a> </li>
-                                        <li> <a href="#"><i class="fa-solid fa-image"></i>Image Creator</a> </li>
+                                        <li> <a href="https://snapshot.canon-asia.com/ph/article/eng/food-photography-and-styling-hacks" target="_blank">Food Photography</a> </li>
+                                        <li> <a href="#">Food Vectors</a> </li>
+                                        <li> <a href="#">Food Digital Art</a> </li>
+                                        <li> <a href="#">Image Creator</a> </li>
                                     </ul>
                                 </div>
                                 <div class="row">
@@ -65,8 +59,8 @@
                                 <div class="row">
                                     <header>Quick Links</header>
                                     <ul class="mega-links">
-                                        <li> <a href="https://www.ustp.edu.ph/" target="_blank"><i class="fa-solid fa-graduation-cap"></i>USTP</a> </li>
-                                        <li> <a href="https://www.youtube.com/@NinongRy" target="_blank"><i class="fa-brands fa-youtube"></i>Youtube Cooking</a> </li>
+                                        <li> <a href="https://www.ustp.edu.ph/" target="_blank">USTP</a> </li>
+                                        <li> <a href="https://www.youtube.com/@NinongRy" target="_blank">Youtube Cooking</a> </li>
                                         <li><a href="#">Website design</a></li>
                                         <li> <a href="https://github.com/Lonergun141/Web-Systems-Technologies-Final-Project.git" target="_blank">Github</a> </li>
                                         <li><a href="#"></a></li>
@@ -76,13 +70,7 @@
                         </div>
                     </li>
                     <li id="bg-contact"> <a href="contact.html" class="main-link"><i class="fa-solid fa-address-book"></i>Contact</a> </li> <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-                    <!-- <li class="dropdown" id="bg-sign-up"> <a href="" class="main-link"><i class="fa-solid fa-user"></i>Sign Up</a> 
-                        <ul class="dropdown-menu">
-                            <li class="dropdown-item"><a href="#">Log In</a></li>
-                            <li class="dropdown-item"><a href="#">Create Account</a></li>
-                            <li class="dropdown-item"><a href="#">Light Mode</a></li>
-                          </ul>
-                    </li>  -->
+               
                     <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
                 </ul> <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
             </div>
@@ -175,6 +163,6 @@
             </div>
         </footer>
 
-        <script src="js/nav.js"></script>
+        <script src="js/nav.js" defer></script>
 </body>
 </html>
